# SHEBLANG

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  build.sh  cl.h  cl.l  cl.y  clc.c  clc.cpp  clg.c  cli.c  cli.cpp  cls.cpp  compile_commands.json  const_expr_checker.cpp  const_expr_checker.h  how_to_store_lines_for_errors.txt  install_clang.sh  lex.yy.c  lexer.cpp  lexer.l  node.cpp  node.h  node_constructors.cpp  node_constructors.h  node_type.h  nodes.cpp  nodes.h  parser.cpp  parser.y  result.h  scratch.md  semantic_utils.cpp  semantic_utils.h  setup_scopes.cpp  template_utils.h  test.py  test.shbl  (+5 more)
calc/: build.sh  build_interpreter.sh  calc  calc.l  calc.tab.c  calc.tab.h  calc.y  calc_helpers.h  calc_interpreter.c  lex.yy.c  readme.md
calc/examples/: factorial.shbl  nested_loop.shbl  simple_arithmetic.shbl
docs/: Instructions.docx
testcases/: assign_basic.shbl  assign_expr_int_plus_int_no_space.shbl  assign_operator_arithmetic.shbl  assign_print.shbl  assignment_by_function_call.shbl  char_type.shbl  const_no_init.shbl  decl_and_arithmetic_simple.shbl  do_while.shbl  do_while_with_break.shbl  empty_if.shbl  enum_basic.shbl  enum_empty.shbl  enum_use_simple.shbl  enum_use_switch.shbl  example.shbl  float_simple.shbl  for_loop_basic.shbl  for_loop_nested.shbl  function_call_multiple_expressions.shbl  function_call_multiple_parameters.shbl  function_call_one_expression.shbl  function_call_one_parameter.shbl  function_call_simple.shbl  function_declaration.shbl  function_multiple_parameters.shbl  function_one_parameter.shbl  function_return_type.shbl  function_simple.shbl  if_basic.shbl  if_if_else.shbl  if_many_else.shbl  if_only.shbl  invalid_and.shbl  invalid_bitwise.shbl  invalid_char.shbl  invalid_char_2.shbl  invalid_char_op.shbl  invalid_compare.shbl  invalid_condition.shbl  (+35 more)
testcases/logical/: add_two_variables.shbl  array_index_basic.shbl  do_while.shbl  (+35 more)
(+101 files in other folders)
